--- a/add-student.html
+++ b/add-student.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Add Student</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
   <div class="navbar">
     <a href="home.html">Home</a>
@@ -19,18 +19,31 @@
     <h1>Add New Student</h1>
 
     <form id="studentForm">
-      <label>Student ID:</label>
-      <input type="text" id="student_id"><br>
-      <label>Last Name:</label>
-      <input type="text" id="last_name"><br>
-      <label>First Name:</label>
-      <input type="text" id="first_name"><br>
-      <label>Email:</label>
-      <input type="email" id="email"><br>
+      <div class="form-group">
+        <label for="student_id">Student ID:</label>
+        <input type="text" id="student_id" required>
+      </div>
+
+      <div class="form-group">
+        <label for="last_name">Last Name:</label>
+        <input type="text" id="last_name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="first_name">First Name:</label>
+        <input type="text" id="first_name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+      </div>
+
       <button type="submit">Submit</button>
     </form>
   </div>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="addStudent.js"></script>
 </body>
 </html>
