--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <tr>
             <td>Ahmed</td>
             <td>Sara</td>
-            <!-- 12 checkboxes (6 sessions x 2 columns) -->
+          
             <td><input type="checkbox"></td><td><input type="checkbox"></td>
             <td><input type="checkbox"></td><td><input type="checkbox"></td>
             <td><input type="checkbox"></td><td><input type="checkbox"></td>
@@ -93,6 +93,9 @@
             <td class="message"></td>
           </tr>
         </tbody>
+        <tbody>
+          
+        </tbody>
       </table>
     </div>
 
@@ -110,6 +113,7 @@
       <canvas id="reportChart"></canvas>
     </div>
   </div>
+
 
   <script src="attendance.js"></script>
   <script src="addStudent.js"></script>
