--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 
   <div class="content">
     <h1>Attendance Table</h1>
+   
+<label for="searchName">Search by Name:</label>
+<input type="text" id="searchName" placeholder="Type a name...">
+
+
+<div class="buttons">
+  <button id="sortAbs">Sort by Absences (Ascending)</button>
+  <button id="sortPart">Sort by Participation (Descending)</button>
+</div>
+
 
     <div class="table-wrapper">
       <table id="attendanceTable">
@@ -112,6 +122,8 @@
       </div>
       <canvas id="reportChart"></canvas>
     </div>
+    <p id="sortMessage" style="font-weight:bold; margin-top:10px;"></p>
+
   </div>
 
 
