--- a/add-student.html
+++ b/add-student.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Student</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+
   <div class="navbar">
     <a href="home.html">Home</a>
     <a href="index.html">Attendance List</a>
@@ -17,27 +18,26 @@
   </div>
 
   <div class="content">
-    <h1>Add New Student</h1>
+    <h1>Add Student</h1>
 
     <form id="studentForm">
-      <label for="student_id">Student ID:</label>
+      <label>Student ID</label>
       <input type="text" id="student_id" required>
 
-      <label for="last_name">Last Name:</label>
+      <label>Last Name</label>
       <input type="text" id="last_name" required>
 
-      <label for="first_name">First Name:</label>
+      <label>First Name</label>
       <input type="text" id="first_name" required>
 
-      <label for="email">Email:</label>
+      <label>Email</label>
       <input type="email" id="email" required>
 
-      <button type="submit">Add Student</button>
+      <input type="submit" value="Add Student">
     </form>
   </div>
 
- 
-
   <script src="addStudent.js"></script>
+
 </body>
 </html>
