--- a/add-student.html
+++ b/add-student.html
@@ -20,18 +20,19 @@
   <div class="content">
     <h1>Add Student</h1>
 
-    <form id="studentForm">
+    <form id="studentForm" action="addstudent.php" method="POST">
+
       <label>Student ID</label>
-      <input type="text" id="student_id" required>
+      <input type="text" name="studentId" id="student_id" required>
 
       <label>Last Name</label>
-      <input type="text" id="last_name" required>
+      <input type="text" name="last_name" id="last_name" required>
 
       <label>First Name</label>
-      <input type="text" id="first_name" required>
+      <input type="text" name="first_name" id="first_name" required>
 
       <label>Email</label>
-      <input type="email" id="email" required>
+      <input type="email" name="email" id="email" required>
 
       <input type="submit" value="Add Student">
     </form>
