Added new files and updated existing scripts

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
   <div class="navbar">
     <a href="home.html" class="active">Home</a>
-    <a href="index.html">Attendance List</a>
+    <a href="attendance.html">Attendance List</a>
     <a href="add-student.html">Add Student</a>
     <a href="#">Reports</a>
     <a href="#">Logout</a>
