--- a/add-student.html
+++ b/add-student.html
@@ -11,7 +11,7 @@
 
   <div class="navbar">
     <a href="home.html">Home</a>
-    <a href="index.html">Attendance List</a>
+    <a href="attendance.html">Attendance List</a>
     <a href="add-student.html" class="active">Add Student</a>
     <a href="#">Reports</a>
     <a href="#">Logout</a>
